--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,11 @@
 main {
   min-height: 80vh;
+  background-color: #f7f7f9;
 }
-
+.container {
+  background-color: white;
+  margin-top: 20px;
+}
 .rating spam {
   margin: 0.1rem;
 }
@@ -37,15 +41,14 @@ h2 {
   background-color: transparent !important;
   height: 50px;
 }
-.list-group-item
-{
-  color: black  !important;
+.list-group-item {
+  color: black !important;
 }
-.todo{
+.todo {
   background-color: red;
   padding-top: 15px;
 }
-.medio{
+.medio {
   background-color: blue;
 }
 .borderwhite {
@@ -218,13 +221,17 @@ header {
   color: white !important;
 }
 .card {
-  background-color: rgba(23, 1, 0, 0.1) !important;
+  background-color: white !important;
 
   color: white;
 }
-
+.card-title {
+  text-align: center;
+}
+.card-text {
+  text-align: center;
+}
 header .textos {
-  
 }
 
 header .titulo {
@@ -248,3 +255,108 @@ header .boton {
   text-decoration: none;
   border-radius: 16px;
 }
+.containerwhite {
+  background-color: white;
+}
+/*----------------------------footer-----------------------------*/
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 10vw;
+  text-align: center;
+  margin-top: 20px;
+  color: #333;
+}
+
+.contenu {
+  /* grow shrink basis */
+  flex: 1 0 auto;
+}
+.contenu p {
+  padding: 5vw 10vw;
+  text-align: justify;
+}
+
+footer {
+  flex-shrink: 0;
+  border-top: 10px rgb(224, 16, 16);
+  width: 100%;
+  background: #221f1f;
+  color: rgb(155, 152, 152);
+}
+.contenu-footer {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 20px;
+  padding: 50px 0 100px;
+}
+
+.bloc {
+  width: 25%;
+  margin: 0 30px;
+}
+.textaligncenter {
+  text-align: center;
+}
+/* contact */
+.footer-contact h3,
+.footer-services h3,
+.footer-horaires h3,
+.footer-medias h3 {
+  font-size: 23px;
+  padding-bottom: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.footer-contact p {
+  padding: 5px 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+.liste-services,
+.liste-horaires,
+.liste-media a {
+  list-style-type: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+.liste-media a {
+  text-decoration: none;
+  color: rgb(202, 201, 201);
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+
+.liste-services a {
+  text-decoration: none;
+  color: rgb(201, 199, 199);
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+.liste-services a:hover {
+  color: rgb(248, 9, 9);
+}
+/* contact */
+.footer-contact h3,
+.footer-services h3,
+.footer-horaires h3,
+.footer-medias h3 {
+  font-size: 23px;
+  padding-bottom: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+
+/*----------------------------endfooter-----------------------------*/
